2005-01-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.c-torture/execute/20020720-1.x: XFAIL for x86 when using
	-fpic or -fPIC.

2004-12-21  Joseph S. Myers  <jsm@polyomino.org.uk>

	PR c/14765
	* gcc.dg/pr14765-1.c: New test.

2004-12-20  Andrew Pinski  <pinskia@physics.uc.edu>

	PR other/19093
	* g++.dg/opt/max1.C: Fix for 64bit targets.

2004-12-19  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/19068
	* g++.dg/opt/max1.C: New test case.

2004-12-16  Wolfgang Bangerth  <bangerth@dealii.com>

	* g++.dg/other/complex1.C: New test.

2004-12-10  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR rtl-optimization/16536
	* gcc.c-torture/execute/restrict-1.c: New test.

2004-12-09  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/16681
	* g++.dg/init/array15.C: New.
	* g++.dg/init/array16.C: New.

2004-11-29  Roger Sayle  <roger@eyesopen.com>

	PR rtl-optimization/9771
	* gcc.dg/pr9771-1.c: New test case.

2004-11-27  Falk Hueffner  <falk@debian.org>

	* gcc.dg/loop-6.c: New test.

2004-10-13  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* g++.dg/inherit/thunk1.C: Run on the SPARC.

2004-09-30  Release Manager

	* GCC 3.3.5 Released.

2004-08-08  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/16790
	* gcc.c-torture/execute/pr16790-1.c: New test case.

2004-08-04  Ulrich Weigand  <uweigand@de.ibm.com>

	Backport from mainline:
	2003-07-11  Jakub Jelinek  <jakub@redhat.com>
	* gcc.dg/20030711-1.c: New test.

2004-07-24  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	PR c++/16175
	* g++.dg/template/ttp10.C: New test.

2004-06-28  Josef Zlomek  <zlomekj@suse.cz>

	PR c/15549
	Backport from mainline
	2003-08-19  Mark Mitchell  <mark@codesourcery.com>

		PR c++/11946.C
		* gcc.dg/c99-bool-1.c: Remove bogus warning.

2004-05-31  Release Manager

	* GCC 3.3.4 Released.

2004-05-31  Eric Botcazou  <ebotcazou@libertysurf.fr>

	Backport from mainline:

	2004-03-26  James A. Morrison  <ja2morri@uwaterloo.ca>
